--- a/frontend-app/src/app/pages/home/home.page.scss
+++ b/frontend-app/src/app/pages/home/home.page.scss
@@ -31,7 +31,7 @@ ion-split-pane {
   display: flex;
   align-items: center;
   gap: 12px;
-  padding: 24px 16px;
+  padding: calc(60px + env(safe-area-inset-top)) 16px 24px 16px;
   margin-bottom: 8px;
   overflow: hidden;
   transition: all 0.3s ease;
@@ -159,12 +159,11 @@ ion-split-pane {
 }
 
 .content-container {
-  height: calc(100% - 56px); // Subtract header height approx
-  overflow-y: auto;
   position: relative;
+  height: 100%;
 
   @media (max-width: 767px) {
-    height: calc(100% - 56px - 70px); // Subtract header and bottom tabs
+    padding-bottom: calc(150px + env(safe-area-inset-bottom)); // Padding extra generoso (Navbar + Carrito + Margen)
   }
 }
 
@@ -291,7 +290,7 @@ ion-split-pane {
   /* Changed from space-around to handle scroll better */
   overflow-x: auto;
   gap: 8px;
-  z-index: 10;
+  z-index: 100;
 
   &::-webkit-scrollbar {
     display: none;
